--- a/NMSWiki.Data/NMSWiki.Data.csproj
+++ b/NMSWiki.Data/NMSWiki.Data.csproj
@@ -85,6 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Ingredients.cs" />
+    <Compile Include="PlanetResources.cs" />
+    <Compile Include="PlanetTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
