--- a/NMSWiki.Models/NMSWiki.Models.csproj
+++ b/NMSWiki.Models/NMSWiki.Models.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IngredientCreate.cs" />
+    <Compile Include="IngredientList.cs" />
+    <Compile Include="PlanetResourceCreate.cs" />
+    <Compile Include="PlanetResourceList.cs" />
+    <Compile Include="PlanetTypeCreate.cs" />
+    <Compile Include="PlanetTypeList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
