craftables service, models, and data added

--- a/NMSWiki.Data/NMSWiki.Data.csproj
+++ b/NMSWiki.Data/NMSWiki.Data.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Craftable.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
