--- a/NMSWiki.Services/NMSWiki.Services.csproj
+++ b/NMSWiki.Services/NMSWiki.Services.csproj
@@ -54,11 +54,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CraftableService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NMSWiki.Data\NMSWiki.Data.csproj">
+      <Project>{BD1DF0EF-C240-4C5C-858C-E174856AE31D}</Project>
+      <Name>NMSWiki.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NMSWiki.Models\NMSWiki.Models.csproj">
+      <Project>{A13DF230-4D6E-4037-A76B-2DCE60D93F40}</Project>
+      <Name>NMSWiki.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
