--- a/NMSWiki.Data/NMSWiki.Data.csproj
+++ b/NMSWiki.Data/NMSWiki.Data.csproj
@@ -90,6 +90,7 @@
     <Compile Include="PlanetResource.cs" />
     <Compile Include="PlanetType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
