--- a/NMSWiki.Models/NMSWiki.Models.csproj
+++ b/NMSWiki.Models/NMSWiki.Models.csproj
@@ -65,6 +65,9 @@
     <Compile Include="PlanetTypeCreate.cs" />
     <Compile Include="PlanetTypeList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceCreate.cs" />
+    <Compile Include="ResourceDetail.cs" />
+    <Compile Include="ResourceEdit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
