--- a/NMSWiki.Models/NMSWiki.Models.csproj
+++ b/NMSWiki.Models/NMSWiki.Models.csproj
@@ -55,10 +55,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IngredientCreate.cs" />
+    <Compile Include="IngredientDetail.cs" />
     <Compile Include="IngredientList.cs" />
     <Compile Include="PlanetResourceCreate.cs" />
     <Compile Include="PlanetResourceList.cs" />
     <Compile Include="PlanetTypeCreate.cs" />
+    <Compile Include="PlanetTypeDetail.cs" />
     <Compile Include="PlanetTypeList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
