fixed a bunch of errors related to typos

--- a/NMSWiki.Services/NMSWiki.Services.csproj
+++ b/NMSWiki.Services/NMSWiki.Services.csproj
@@ -54,9 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PlanetTypeService.cs" />
     <Compile Include="CraftableService.cs" />
+    <Compile Include="PlanetTypeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -64,11 +65,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NMSWiki.Data\NMSWiki.Data.csproj">
-      <Project>{bd1df0ef-c240-4c5c-858c-e174856ae31d}</Project>
+      <Project>{BD1DF0EF-C240-4C5C-858C-E174856AE31D}</Project>
       <Name>NMSWiki.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\NMSWiki.Models\NMSWiki.Models.csproj">
-      <Project>{a13df230-4d6e-4037-a76b-2dce60d93f40}</Project>
+      <Project>{A13DF230-4D6E-4037-A76B-2DCE60D93F40}</Project>
       <Name>NMSWiki.Models</Name>
     </ProjectReference>
   </ItemGroup>
