--- a/NMSWiki.Services/NMSWiki.Services.csproj
+++ b/NMSWiki.Services/NMSWiki.Services.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CraftableService.cs" />
+    <Compile Include="PlanetResourceService.cs" />
     <Compile Include="PlanetTypeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceService.cs" />
