--- a/NMSWiki.WebAPI/NMSWiki.WebAPI.csproj
+++ b/NMSWiki.WebAPI/NMSWiki.WebAPI.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CraftableController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PlanetResourceController.cs" />
     <Compile Include="Controllers\PlanetTypeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
