Ingredient service and controller finished

--- a/NMSWiki.Models/NMSWiki.Models.csproj
+++ b/NMSWiki.Models/NMSWiki.Models.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CraftableListItem.cs" />
     <Compile Include="IngredientCreate.cs" />
     <Compile Include="IngredientDetail.cs" />
+    <Compile Include="IngredientEdit.cs" />
     <Compile Include="IngredientList.cs" />
     <Compile Include="PlanetResourceCreate.cs" />
     <Compile Include="PlanetResourceDetail.cs" />
