--- a/NMSWiki.Models/NMSWiki.Models.csproj
+++ b/NMSWiki.Models/NMSWiki.Models.csproj
@@ -68,10 +68,12 @@
     <Compile Include="PlanetResourceDetail.cs" />
     <Compile Include="PlanetResourceEdit.cs" />
     <Compile Include="PlanetResourceList.cs" />
+    <Compile Include="PlanetResourceLookup.cs" />
     <Compile Include="PlanetTypeCreate.cs" />
     <Compile Include="PlanetTypeDetail.cs" />
     <Compile Include="PlanetTypeEdit.cs" />
     <Compile Include="PlanetTypeList.cs" />
+    <Compile Include="PlanetTypesPlanetResourceLookup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceCreate.cs" />
     <Compile Include="ResourceDetail.cs" />
