--- a/NMSWiki.WebAPI/Web.config
+++ b/NMSWiki.WebAPI/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=NMSWiki.WebAPI;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="Server=tcp:duncanssqlserver.database.windows.net,1433;Initial Catalog=NMSWikiDatabase;Persist Security Info=False;User ID=azureuser;Password=C!cuDmK-7Z!8eY4;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
